# popgenml

./: .gitmodules  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  popgenml.readthedocs.yaml  pyproject.toml  requirements.txt  setup.py
SLURM/: simulate.py  simulate_bottleneck.py  simulate_slim.py
docs/: introduction.md  requirements.txt
docs/markdown/: config_files.md
docs/source/: conf.py  config-files.md  index.rst  introduction.md  popgenml.rst
include/: build_all.sh
pgml/: Cargo.toml
pgml/src/: lib.rs
popgenml/data/: __init__.py  data_loaders.py  datasets.py  distributions.py  functions.py  fw.py  gcn_loaders.py  io_.py  msmc2.py  relate.py  simulators.py  stats.py  transforms.py  viz.py
popgenml/models/: gcn_layers.py  layers.py  unet.py  viz.py
priors/: migration.csv
src/data/: arg_tests.py  format_genomat.py  get_h5_stats.py
src/simulations/: simulate.py  simulate_bottleneck.py  simulate_demography.py  simulate_msmodified.py  simulate_recombination.py  simulate_slim.py
src/simulations/slim/: introg_bidirectional.slim
src/training/: eval_flow.py  eval_flow_popsize.py  eval_vcf.py  model.py  networks_stylegan2.py  project_median_trees.py  solve_ode.py  swagan_gray.py  train_backproj.py  train_cnn.py  train_dist_cnn.py  train_flow.py  train_stylegan.py  train_tree_delta.py  train_unet.py
tests/: test_conversions.py  test_msmc2.py
training_configs/: example_unet.config
tutorials/: introUNet_tutorial.ipynb
tutorials/drosophila_segmentation/: README.md
tutorials/recombination/: recom.ini  regress_cnn.py
(+3 files in other folders)
